src/component/histogram/snapshots/envision__component__histogram__tests__snapshot_disabled.snap
---
source: src/component/histogram/tests.rs
expression: terminal.backend().to_string()
---
┌Disabled Histogram────────────────────────────────────────┐
│██████████ ██████████ ██████████ ██████████ ██████████    │
│██████████ ██████████ ██████████ ██████████ ██████████    │
│██████████ ██████████ ██████████ ██████████ ██████████    │
│██████████ ██████████ ██████████ ██████████ ██████████    │
│██████████ ██████████ ██████████ ██████████ ██████████    │
│██████████ ██████████ ██████████ ██████████ ██████████    │
│██████████ ██████████ ██████████ ██████████ ██████████    │
│██████████ ██████████ ██████████ ██████████ ██████████    │
│██████████ ██████████ ██████████ ██████████ ██████████    │
│██████████ ██████████ ██████████ ██████████ ██████████    │
│██████████ ██████████ ██████████ ██████████ ██████████    │
│██████████ ██████████ ██████████ ██████████ ██████████    │
│██████████ ██████████ ██████████ ██████████ ██████████    │
│██████████ ██████████ ██████████ ██████████ ██████████    │
│██████████ ██████████ ██████████ ██████████ ██████████    │
│██████████ ██████████ ██████████ ██████████ ██████████    │
│████1█████ ████1█████ ████1█████ ████1█████ ████1█████    │
│    1          2          3          4          5         │
└──────────────────────────────────────────────────────────┘
