src/component/histogram/snapshots/envision__component__histogram__tests__snapshot_empty.snap
---
source: src/component/histogram/tests.rs
expression: terminal.backend().to_string()
---
┌──────────────────────────────────────────────────────────┐
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│ 0    0    0    0    0    0    0    0    0    0           │
└──────────────────────────────────────────────────────────┘
