src/component/histogram/snapshots/envision__component__histogram__tests__snapshot_with_data.snap
---
source: src/component/histogram/tests.rs
expression: terminal.backend().to_string()
---
┌Value Distribution────────────────────────────────────────┐
│                                            ██████████    │
│                                            ██████████    │
│                                            ██████████    │
│                                            ██████████    │
│                                            ██████████    │
│                                            ██████████    │
│                                            ██████████    │
│                                            ██████████    │
│▄▄▄▄▄▄▄▄▄▄ ▄▄▄▄▄▄▄▄▄▄            ▄▄▄▄▄▄▄▄▄▄ ██████████    │
│██████████ ██████████            ██████████ ██████████    │
│██████████ ██████████            ██████████ ██████████    │
│██████████ ██████████            ██████████ ██████████    │
│██████████ ██████████ ▂▂▂▂▂▂▂▂▂▂ ██████████ ██████████    │
│██████████ ██████████ ██████████ ██████████ ██████████    │
│██████████ ██████████ ██████████ ██████████ ██████████    │
│██████████ ██████████ ██████████ ██████████ ██████████    │
│████2█████ ████2█████ ████1█████ ████2█████ ████4█████    │
│    1          2          3          4          5         │
└──────────────────────────────────────────────────────────┘
