src/component/histogram/snapshots/envision__component__histogram__tests__snapshot_with_title.snap
---
source: src/component/histogram/tests.rs
expression: terminal.backend().to_string()
---
┌Response Times────────────────────────────────────────────┐
│██████████ ██████████ ██████████ ██████████ ██████████    │
│██████████ ██████████ ██████████ ██████████ ██████████    │
│██████████ ██████████ ██████████ ██████████ ██████████    │
│██████████ ██████████ ██████████ ██████████ ██████████    │
│██████████ ██████████ ██████████ ██████████ ██████████    │
│██████████ ██████████ ██████████ ██████████ ██████████    │
│██████████ ██████████ ██████████ ██████████ ██████████    │
│██████████ ██████████ ██████████ ██████████ ██████████    │
│██████████ ██████████ ██████████ ██████████ ██████████    │
│██████████ ██████████ ██████████ ██████████ ██████████    │
│██████████ ██████████ ██████████ ██████████ ██████████    │
│██████████ ██████████ ██████████ ██████████ ██████████    │
│██████████ ██████████ ██████████ ██████████ ██████████    │
│██████████ ██████████ ██████████ ██████████ ██████████    │
│██████████ ██████████ ██████████ ██████████ ██████████    │
│██████████ ██████████ ██████████ ██████████ ██████████    │
│████1█████ ████1█████ ████1█████ ████1█████ ████1█████    │
│    14         22         30         38         46        │
└──────────────────────────────────────────────────────────┘
