src/component/histogram/snapshots/envision__component__histogram__tests__view_chrome_owned_no_outer_border.snap
---
source: src/component/histogram/tests.rs
expression: terminal.backend().to_string()
---
███     ███         ███     ███     ███ 
███     ███         ███     ███     ███ 
███     ███         ███     ███     ███ 
███     ███         ███     ███     ███ 
███     ███         ███     ███     ███ 
███     ███         ███     ███     ███ 
███     ███         ███     ███     ███ 
███     ███         ███     ███     ███ 
███     ███         ███     ███     ███ 
███     ███         ███     ███     ███ 
█1█     █1█         █1█     █1█     █1█ 
 1   2   2   2   3   3   4   4   4   5
